hphp/hack/test/ifc/check/mut_array_literal.php.exp
=== IFC analysis results for mut_array_literal.php
File "mut_array_literal.php", line 55, characters 3-51:
Data with policy `VALUE_COMPLEX` appears in context `CONTAINER_COMPLEX`. (Typing[4379])
  File "mut_array_literal.php", line 25, characters 14-26:
  This may be the data source with policy `VALUE_COMPLEX`
  File "mut_array_literal.php", line 11, characters 25-41:
  This may be the data sink with policy `CONTAINER_COMPLEX`
File "mut_array_literal.php", line 55, characters 3-51:
Data with policy `CONTAINER_COMPLEX` appears in context `VALUE_COMPLEX`. (Typing[4379])
  File "mut_array_literal.php", line 11, characters 25-41:
  This may be the data source with policy `CONTAINER_COMPLEX`
  File "mut_array_literal.php", line 25, characters 14-26:
  This may be the data sink with policy `VALUE_COMPLEX`
File "mut_array_literal.php", line 50, characters 3-74:
Data with policy `VALUE_PRIM2` appears in context `CONTAINER`. (Typing[4379])
  File "mut_array_literal.php", line 23, characters 16-26:
  This may be the data source with policy `VALUE_PRIM2`
  File "mut_array_literal.php", line 9, characters 27-36:
  This may be the data sink with policy `CONTAINER`
File "mut_array_literal.php", line 50, characters 3-74:
Data with policy `VALUE_PRIM1` appears in context `CONTAINER`. (Typing[4379])
  File "mut_array_literal.php", line 21, characters 16-26:
  This may be the data source with policy `VALUE_PRIM1`
  File "mut_array_literal.php", line 9, characters 27-36:
  This may be the data sink with policy `CONTAINER`
File "mut_array_literal.php", line 50, characters 3-74:
Data with policy `KEY` appears in context `CONTAINER`. (Typing[4379])
  File "mut_array_literal.php", line 27, characters 19-22:
  This may be the data source with policy `KEY`
  File "mut_array_literal.php", line 9, characters 27-36:
  This may be the data sink with policy `CONTAINER`
File "mut_array_literal.php", line 45, characters 3-64:
Data with policy `VALUE_PRIM2` appears in context `CONTAINER`. (Typing[4379])
  File "mut_array_literal.php", line 23, characters 16-26:
  This may be the data source with policy `VALUE_PRIM2`
  File "mut_array_literal.php", line 9, characters 27-36:
  This may be the data sink with policy `CONTAINER`
File "mut_array_literal.php", line 45, characters 3-64:
Data with policy `VALUE_PRIM1` appears in context `CONTAINER`. (Typing[4379])
  File "mut_array_literal.php", line 21, characters 16-26:
  This may be the data source with policy `VALUE_PRIM1`
  File "mut_array_literal.php", line 9, characters 27-36:
  This may be the data sink with policy `CONTAINER`
